--- a/index.org
+++ b/index.org
@@ -56,9 +56,9 @@ a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about O
 - <2009-02-10 Tue>: Release 6.22
 - <2009-02-02 Mon>: Release 6.21
 
-* Current Version (6.25d)
+* Current Version (6.25e)
 
-The current version is 6.25d.  To see what has changed in recent
+The current version is 6.25e.  To see what has changed in recent
 releases, check this detailed list of [[file:Changes.html][user-visible changes]].
 
 This package works on Emacs 23 and 22, and (with minor restrictions)
@@ -71,7 +71,7 @@ a bit behind the website release.
 
 ** The standard distribution
 
-Download as [[file:org-6.25d.zip][zip file]] or [[file:org-6.25d.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.25e.zip][zip file]] or [[file:org-6.25e.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.html#Installation][Installation]] and [[http://orgmode.org/manual/Activation.html#Activation][Activation]].
 
