Add link to sourceforge community award choice

--- a/index.org
+++ b/index.org
@@ -9,6 +9,11 @@
 
 
 #+BEGIN_HTML
+<div style="position: fixed; display: block; left: 50px;top: 500px;>
+<a href="http://sourceforge.net/community/cca09/nominate/?project_name=Org-Mode&project_url=http://orgmode.org/"><img
+src="http://sourceforge.net/images/cca/cca_nominate.png"
+border="0"/></a>
+</div>
 <form action="http://www.google.com/cse" id="cse-search-box">
   <div align="right">
     <input type="hidden" name="cx" value="002987994228320350715:2gaddxoioh4" />
@@ -25,6 +30,8 @@
 Org-mode is for keeping notes, maintaining ToDo lists, doing project
 planning, and authoring with a fast and effective plain-text
 system.
+
+
 
 #+ATTR_HTML: style="border:1px solid black;"
 [[http://orgmode.org/img/tasks.png]]
