--- a/index.org
+++ b/index.org
@@ -55,13 +55,14 @@ If you'd like to know what other people have said about Org-mode, take
 a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about Org]].
 
 * News
+- <2009-05-23 Sat>: Release 6.27
 - <2009-04-19 Sun>: Release 6.26
 - <2009-04-01 Wed>: Release 6.25
 - <2009-03-05 Thu>: Release 6.24
 
-* Current Version (6.26d)
+* Current Version (6.27)
 
-The current version is 6.26d.  To see what has changed in recent
+The current version is 6.27.  To see what has changed in recent
 releases, check this detailed list of [[file:Changes.html][user-visible changes]].
 
 This package works on Emacs 23 and 22, and (with minor restrictions)
@@ -74,7 +75,7 @@ behind the website release.
 
 ** The standard distribution
 
-Download as [[file:org-6.26d.zip][zip file]] or [[file:org-6.26d.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-6.27.zip][zip file]] or [[file:org-6.27.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.html#Installation][Installation]] and [[http://orgmode.org/manual/Activation.html#Activation][Activation]].
 
