--- a/index.org
+++ b/index.org
@@ -26,7 +26,9 @@ black;" alt="http://orgmode.org/img/tasks.png" />
 vertical-align:bottom;">
 <h3 align=center>Donations</h3>
 <span style="font-size: 80%;">
-If you are looking for a way to say "thank you", or if you'd like to
+If you are looking for <a
+href="http://thread.gmane.org/gmane.emacs.orgmode/14209">a way to say
+"thank you"</a>, or if you'd like to
 support the future development of Org-mode with a donation, use the
 button below.</span>
 <br>
