--- a/i.org
+++ b/i.org
@@ -3,8 +3,8 @@
 
 * Pic i
 
-[[file:Org-mode-css-2.png]]
+[[file:Org-mode-scc-2.png]]
 
 * Pic 2
 
-[[file:Org-mode-css.png]]
+[[file:Org-mode-scc.png]]
